[package]
name = "avr-rs"
version = "0.1.0"
authors = ["JakWai01 <jakob.waibel@web.de>"]
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
ruduino = "0.3"
avr-config = "2.0.1"

[dependencies.arduino-uno]
git = "https://github.com/Rahix/avr-hal"
rev = "536c5d"

[build]
target = "avr-atmega328p.json"

[unstable]
build-std = ["core"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"